force-app/main/default/objects/Extole_Event_Log__c/Extole_Event_Log__c.object-meta.xml
<CustomObject>
    <label>Extole Event Log</label>
    <nameField>
        <label>Event Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>EVT-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Extole Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>