force-app/main/default/objects/Extole_Event_Log__c/fields/Config_Key__c.field-meta.xml
<CustomField>
    <fullName>Config_Key__c</fullName>
    <label>Config Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>