force-app/main/default/objects/Extole_Event_Log__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONFIG_CREATED</fullName>
            </value>
            <value>
                <fullName>CONFIG_EDITED</fullName>
            </value>
            <value>
                <fullName>CONFIG_SAVED</fullName>
            </value>
            <value>
                <fullName>CONFIG_DELETED</fullName>
            </value>
            <value>
                <fullName>CONFIG_DEACTIVATED</fullName>
            </value>
            <value>
                <fullName>DEPLOY_INITIATED</fullName>
            </value>
            <value>
                <fullName>DEPLOY_SUCCEEDED</fullName>
            </value>
            <value>
                <fullName>DEPLOY_FAILED</fullName>
            </value>
            <value>
                <fullName>FLOW_ACTIVATED</fullName>
            </value>
            <value>
                <fullName>FLOW_DEACTIVATED</fullName>
            </value>
            <value>
                <fullName>SAFETY_CHECK_RUN</fullName>
            </value>
            <value>
                <fullName>SAFETY_CHECK_ACTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>