force-app/main/default/objects/Extole_Event_Log__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>